# devcli

./: .gitignore  CONTRIBUTING.rst  Justfile  LICENSE  README.rst  TODO.taskpaper  pyproject.toml
.devcli/: example.py  template.py
.github/workflows/: jekyll-gh-pages.yml
conf/: defaults.toml
devcli.legacy/: cmd.py  shell.py
devcli.legacy/command/: ci.py  op.py
devcli.legacy/sh/: one_password.py
devcli.legacy/utils/: text.py
devcli/commands/: README  config.py  edit.py  op.py  url.py
devcli/config/: config.py
devcli/core/: __init__.py  cli.py
devcli/framework/: __init__.py  base.py  console.py  error.py
devcli/utils/: one_password.py  shell.py
docs/: CNAME  Rakefile  _config.yml  index.md
docs/assets/css/: style.scss
docs/design/: logo.graffle
tests/: conftest.py  test_base.py  test_cli.py  test_conf.py  test_console.py  test_core.py  test_error.py  test_example.py
tests/commands/: test_config.py  test_edit.py  test_op.py  test_url.py
tests/fixtures/: general.toml  invalid.toml  placeholder.py  specific.toml
tests/utils/: test_one_password.py  test_shell.py
