[project]
name = "devcli"
version = "3.0.1"
description = "A command line tool to create command line tools"
authors = [{ name = "Marco Valtas" }]
readme = "README.rst"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "toml>=0.10.2,<0.11",
    "mock>=5.1.0,<6",
    "typer>=0.15.1",
    "rich>=13.9.4,<14",
    "requests>=2.31.0,<3",
    "pyfakefs>=5.7.2,<6",
    "black==25.1.0",
    "pytest==8.3.4",
]

[project.scripts]
devcli = "devcli.core.cli:cli"

[dependency-groups]
dev = ["pytest>=7.0.0"]

[tool.hatch.build.targets.sdist]
include = [
    "devcli/**/*",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
include = [
    "devcli/**/*",
    "pyproject.toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
